@@ -18,6 +18,7 @@ Refactoring
 Enhancements / wishes
 ---------------------
 
+- detect serial columns from pg_depend, not column default (observe deviating serial name)
 - Slony-I failover
 - Drop object using replication
 - Restrict subscription provider to origin and subscribers
