@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-02-19 AP  1.4.2  Fix serial column detection for 8.1 per Kris Jurka
+2006-02-19 AP         Display column dependencies
 2006-02-19 AP         Rearrange "view data" position in toolbar/menu
 2006-02-19 AP         Revert "Allow SELECT inside xact.." to have messages back
 2006-02-17 DP  1.4.2  Mask the password when logging the connection string.
